--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,18 +31,18 @@ jobs:
           llvm-tools-preview
 
           rustup override set ${{ matrix.toolchain }}
-      - name: Configure cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: >-
-            test-${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{
-            hashFiles('**/Cargo.lock') }}
+      #- name: Configure cache
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: |
+      #      ~/.cargo/bin/
+      #      ~/.cargo/registry/index/
+      #      ~/.cargo/registry/cache/
+      #      ~/.cargo/git/db/
+      #      target/
+      #    key: >-
+      #      test-${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{
+      #      hashFiles('**/Cargo.lock') }}
       - name: Test
         run: cargo test --lib
   test-lib-macos:
@@ -69,18 +69,18 @@ jobs:
           llvm-tools-preview
 
           rustup override set ${{ matrix.toolchain }}
-      - name: Configure cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: >-
-            test-${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{
-            hashFiles('**/Cargo.lock') }}
+      #- name: Configure cache
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: |
+      #      ~/.cargo/bin/
+      #      ~/.cargo/registry/index/
+      #      ~/.cargo/registry/cache/
+      #      ~/.cargo/git/db/
+      #      target/
+      #    key: >-
+      #      test-${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{
+      #      hashFiles('**/Cargo.lock') }}
       - name: Test
         run: cargo test --lib
   test-coverage:
@@ -195,22 +195,22 @@ jobs:
           sudo apt-get install libpcap-dev
       - name: Install pre-commit
         run: pip install --no-cache-dir pre-commit
-      - name: Configure Rust cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: 'pre-commit-${{ runner.os }}-cargo-${{ hashFiles(''**/Cargo.lock'') }}'
-      - name: Configure pre-commit cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pre-commit
-          key: >-
-            pre-commit-${{ runner.os }}-pre-commit-${{
-            hashFiles('**/.pre-commit-config.yaml') }}
+      #- name: Configure Rust cache
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: |
+      #      ~/.cargo/bin/
+      #      ~/.cargo/registry/index/
+      #      ~/.cargo/registry/cache/
+      #      ~/.cargo/git/db/
+      #      target/
+      #    key: 'pre-commit-${{ runner.os }}-cargo-${{ hashFiles(''**/Cargo.lock'') }}'
+      #- name: Configure pre-commit cache
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: ~/.cache/pre-commit
+      #    key: >-
+      #      pre-commit-${{ runner.os }}-pre-commit-${{
+      #      hashFiles('**/.pre-commit-config.yaml') }}
       - name: Run pre-commit
         run: pre-commit run --all-files
