--- a/ps/Cargo.toml
+++ b/ps/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
-thiserror = "2.0.0"
+chrono = "=0.4.38"
+thiserror = "=2.0.12"
 
 [[example]]
 name = "list_process"
