--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = "=0.4.38"
 config = "=0.15.9"
-duckdb = { version = "=1.1.1", features = ["bundled"] }
+duckdb = { git = "https://github.com/spiceai/duckdb-rs.git", rev = "a2f4f443601f0fc2a2b1919705a9adf74ec493c2", features = ["bundled"] }
 etc = { path = "../etc"}
 lazy_static = "=1.5.0"
 lsof = { path = "../lsof"}
